syntax = "proto3";

option java_package = "com.example.grpc";
option java_multiple_files = true;
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string name = 1;
  int32 age = 2;
}

message UserResponse {
  int32 userId = 1;
  string name = 2;
  string age = 3;
}